trying to fix logo alignment

--- a/praisetheflesh/ptf/static/kyle_gannon/styles.css
+++ b/praisetheflesh/ptf/static/kyle_gannon/styles.css
@@ -199,7 +199,7 @@ figure {
 }
 
 img {
-  vertical-align: middle;
+  vertical-align: auto;
   border-style: none;
 }
 
